OverlayScrollBar made some issues fix theme all

--- a/src/shared/components/layout/_index.scss
+++ b/src/shared/components/layout/_index.scss
@@ -1,5 +1,5 @@
 .page-layout {
-  >.page-content {
+  .page-content {
     min-height: 100vh;
     margin-top: 96px;
     @include map-respect(margin-top,
@@ -14,7 +14,7 @@
     box-shadow: -10rem 10rem var(--positive), 10rem 10rem var(--positive);
   }
 
-  >.sood-nav {
+  .sood-nav {
     position: fixed;
     top: 0px;
     left: 0;
